--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^2.4.85",
     "loadash": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
