--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^2.4.85",
+    "axios": "^0.18.0",
     "loadash": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
